<resources>

    <string name="button">Button</string>

    <string name="macchiato_title">Macchiato</string>
    <string name="macchiato_description">Macchiato is a strong espresso “stained”\n with a small amount of milk foam,\n balancing bold coffee flavor \nwith a touch of creaminess.</string>
    <string name="choose_milk">Choose Milk</string>
    <string name="coffee_size">Coffee Size</string>
    <string name="almond">Almond</string>
    <string name="classic">Classic</string>
    <string name="chocolate">Chocolate</string>
    <string name="milk">Milk</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string> <!-- Corrected typo from "Mediam" -->
    <string name="large">Large</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="todo">TODO</string>
    <string name="ice_milk_coffee_rs_1500_00">Ice Milk Coffee RS:1500.00</string>
    <string name="hello_charuni">Hello Charuni!</string>
    <string name="best_beans">Best Beans</string>
    <string name="the_quality_of_our_coffee_n_beans_is_always_maintained_n_so_that_our_coffee_nlover_still_get_the_best_ncoffee_taste">The Quality of our Coffee\n Beans is always Maintained\n So that Our Coffee \nLover Still Get the Best \nCoffee Taste.</string>
    <string name="ice_coffee">Ice Coffee</string>
    <string name="shake">Shake</string>
    <string name="hot_coffee">Hot Coffee</string>
    <string name="snacks">Snacks</string>
    <string name="mocha_rs_1200_00">Mocha Rs:1200.00</string>
    <string name="late_rs_800_00">Late RS:800.00</string>
    <string name="irish_coffee_rs_800_00">Irish Coffee Rs:800.00</string>
    <string name="affogato_rs_1700_00">Affogato Rs:1700.00</string>
    <string name="vietnamese_coffee_rs_1400_00">Vietnamese Coffee Rs:1400.00</string>
    <string name="name">Name</string>
    <string name="Name" />
    <string name="enter_your_username">Enter Your UserName</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="postal_code">Postal Code</string>
    <string name="rs_1760_00">RS:1760.00</string>
    <string name="_1">+ 1 -</string>
    <string name="total_amount_rs_1500">Total Amount Rs:1500</string>
    <string name="checkout">CHECKOUT</string>
    <string name="cart">Cart</string>
    <string name="rs_1200_00">Rs:1200.00</string>
    <string name="expresso">Expresso</string>
    <string name="rs_1750_00">Rs:1750.00</string>
    <string name="frappe">Frappe</string>
    <string name="turkish_coffee">Turkish Coffee</string>
    <string name="choose_your_coffee">Choose Your Coffee</string>
    <string name="expresso_nrs_1200_00">Expresso\nRs:1200.00</string>
    <string name="americano_nrs_1300_00">Americano\nRs:1300.00</string>
    <string name="latte_nrs_1500_00">Latte\nRs:1500.00</string>
    <string name="macchiato_nrs_1400_00">Macchiato\nRs:1400.00</string>
    <string name="flat_white_nrs_1600_00">Flat White\nRs:1600.00</string>
    <string name="mocha_nrs_1700_00">Mocha\nRs:1700.00</string>
    <string name="cortado_nrs_950_00">Cortado\nRs:950.00</string>
    <string name="irish_coffee_nrs_1890_00">Irish Coffee\nRs:1890.00</string>
    <string name="turkish_coffee_nrs_1790_00">Turkish Coffee\nRs:1790.00</string>
    <string name="cold_coffee">Cold Coffee</string>
    <string name="cold_brew_nrs_1790_00">Cold Brew\nRs:1790.00</string>
    <string name="frappe_nrs_1790_00">Frappe\nRs:1790.00</string>
    <string name="nitro_cold_brew_nrs_1790_00">Nitro Cold Brew\nRs:1790.00</string>
    <string name="frozen_coffee_nrs_1790_00">Frozen Coffee\nRs:1790.00</string>
    <string name="caramel_macchiato_nrs_1790_00">Caramel Macchiato\nRs:1790.00</string>
    <string name="coffee_tonic_nrs_1790_00">Coffee Tonic\nRs:1790.00</string>
    <string name="macha_coffee_nrs_1790_00">Macha Coffee\nRs:1790.00</string>
    <string name="caramel_milk_shake_nrs_1790_00">Caramel Milk Shake\nRs:1790.00</string>
    <string name="ice_tea">Ice Tea</string>
    <string name="vanilla_tea_nrs_1790_00">Vanilla Tea\nRs:1790.00</string>
    <string name="vanilla_latte_nrs_1790_00">Vanilla Latte\nRs:1790.00</string>
    <string name="lemon_mojito_nrs_1790_00">Lemon Mojito\nRs:1790.00</string>
    <string name="chocolate_shake_nrs_1790_00">Chocolate Shake\nRs:1790.00</string>
    <string name="passion_fruit_juice_nrs_789_00">Passion Fruit Juice\nRs:789.00</string>
    <string name="strawberry_shake_nrs_1790_00">Strawberry Shake\nRs:1790.00</string>
    <string name="address">Address</string>
    <string name="payment">Payment</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_number">Card Number</string>
    <string name="cvc">CVC</string>
    <string name="mm_yy">MM/YY</string>
    <string name="subtotal_rs_1200_00">Subtotal Rs:1200.00</string>
    <string name="shiping_fee_rs_300_00">Shiping Fee Rs:300.00</string>
    <string name="promocode_enter_promo_code_here">Promocode Enter Promo Code Here</string>
    <string name="grand_total_rs_1500_00">Grand Total Rs:1500.00</string>
    <string name="rs_1500_00">Rs: 1500.00</string>
    <string name="pay_now">Pay Now</string>
    <string name="category">Category</string>
    <string name="special_for_you">Special For You</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="re_enter_password">Re_enter_password</string>
    <string name="re_enter_your_password">Re-Enter your Password</string>
    <string name="submit">Submit</string>
    <string name="login">login</string>
    <string name="google">google</string>
    <string name="facebook">Facebook</string>
    <string name="or_login_with">Or Login With</string>
    <string name="macchiato">Macchiato</string>
    <string name="macchiato_is_a_strong_espresso_stained_n_with_a_small_amount_of_milk_foam_n_balancing_bold_coffee_flavor_nwith_a_touch_of_creaminess">Macchiato is a strong espresso “stained”\n with a small amount of milk foam,\n balancing bold coffee flavor \nwith a touch of creaminess.</string>
    <string name="mediam">Mediam</string>
</resources>