<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment_address"
    android:background="@drawable/main">


    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Cart"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/line1" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Address"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/Lion"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33"
        app:layout_constraintVertical_bias="0.149">


        <EditText
            android:id="@+id/editTextText"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Name"
            android:textColor="@color/black"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="."
            android:hint="@string/enter_your_username"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/enter_your_email"

            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:hint="Enter Your Email "
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="330dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:hint="@string/postal_code"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnNextAddress"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="192dp"
        android:backgroundTint="@color/Nude"
        android:text="Next"
        android:textColor="#120F0F"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>