<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/Nude">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="397dp"
        android:layout_height="450dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coffee_1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="917dp"
        android:layout_height="850dp"
        android:layout_marginTop="164dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle20" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:text="Hi Please\n   Login"
        android:textColor="#2C0D0D"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="437dp"
        android:layout_height="547dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/txtREmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:autofillHints="Enter Your Email"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="Enter Your Email"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_margin="12dp"
            android:autofillHints="Enter Your Password"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="Enter Your Password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/txtDnt_have_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="Don't Have An Account ? Sign Up "
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="32dp"

            android:layout_marginEnd="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/black" />

            <TextView
                android:id="@+id/textOrLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/or_login_with"
                android:textSize="16sp" />


            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/social_btn_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="77dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/facebook" />

                <TextView
                    android:id="@+id/Shake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/facebook"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/social_btn_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="77dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/google"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:id="@+id/Shake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/google"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="DuplicateIds" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="370dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/Brunette"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/login"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
